# cancer-prediction-swm35

./: LICENSE  README.md  breast_cancer_model.pkl  mkdocs.yml  notebook.ipynb  pyproject.toml
cancer_prediction/: streamlit_app.py
docs/: index.md
docs/cancer-prediction/: cancer_model.md
tests/: tests_CancerModel.py
